Add option to preselect nothing when automatic completion is invoked

Since the first entry was previously always preselected, it sometimes
made entering newlines (with the return key) hard for users who are not
familiar with Shift+Enter.

BUG: 316413